k8/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-virtualservice
  namespace: default
spec:
  hosts:
    - "api.app.com"
  gateways:
    - app-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: app.default.svc.cluster.local
            port:
              number: 8080
